* vm.c (invoke_bmethod, invoke_block_from_c_0): revert r52104   partially to avoid "self has wrong type to call super in this   context" errors.   [ruby-core:72724] [Bug #11954]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55462 b2dd03c8-39d4-4d8f-98ff-823fe69b080e