test/ruby/test_objectspace.rb
@@ -85,6 +85,52 @@ End
     }
   end
 
+  def test_finalizer_with_super
+    assert_in_out_err(["-e", <<-END], "", %w(:ok), [])
+      class A
+        def foo
+        end
+      end
+
+      class B < A
+        def foo
+          1.times { super }
+        end
+      end
+
+      class C
+        module M
+        end
+
+        FINALIZER = proc do
+          M.module_eval do
+          end
+        end
+
+        def define_finalizer
+          ObjectSpace.define_finalizer(self, FINALIZER)
+        end
+      end
+
+      class D
+        def foo
+          B.new.foo
+        end
+      end
+
+      C::M.singleton_class.send :define_method, :module_eval do |src, id, line|
+      end
+
+      GC.stress = true
+      10.times do
+        C.new.define_finalizer
+        D.new.foo
+      end
+
+      p :ok
+    END
+  end
+
   def test_each_object
     klass = Class.new
     new_obj = klass.new
